Imported packages and data.

--- a/Twitter-Sentiment-Analysis.ipynb
+++ b/Twitter-Sentiment-Analysis.ipynb
@@ -7,7 +7,132 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Import-Packages-&amp;-Data\" data-toc-modified-id=\"Import-Packages-&amp;-Data-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Import Packages &amp; Data</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Packages & Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import packages\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.pylab import rcParams\n",
+    "import matplotlib\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "      <th>emotion_in_tweet_is_directed_at</th>\n",
+       "      <th>is_there_an_emotion_directed_at_a_brand_or_product</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>.@wesley83 I have a 3G iPhone. After 3 hrs twe...</td>\n",
+       "      <td>iPhone</td>\n",
+       "      <td>Negative emotion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>@jessedee Know about @fludapp ? Awesome iPad/i...</td>\n",
+       "      <td>iPad or iPhone App</td>\n",
+       "      <td>Positive emotion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>@swonderlin Can not wait for #iPad 2 also. The...</td>\n",
+       "      <td>iPad</td>\n",
+       "      <td>Positive emotion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>@sxsw I hope this year's festival isn't as cra...</td>\n",
+       "      <td>iPad or iPhone App</td>\n",
+       "      <td>Negative emotion</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>@sxtxstate great stuff on Fri #SXSW: Marissa M...</td>\n",
+       "      <td>Google</td>\n",
+       "      <td>Positive emotion</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          tweet_text  \\\n",
+       "0  .@wesley83 I have a 3G iPhone. After 3 hrs twe...   \n",
+       "1  @jessedee Know about @fludapp ? Awesome iPad/i...   \n",
+       "2  @swonderlin Can not wait for #iPad 2 also. The...   \n",
+       "3  @sxsw I hope this year's festival isn't as cra...   \n",
+       "4  @sxtxstate great stuff on Fri #SXSW: Marissa M...   \n",
+       "\n",
+       "  emotion_in_tweet_is_directed_at  \\\n",
+       "0                          iPhone   \n",
+       "1              iPad or iPhone App   \n",
+       "2                            iPad   \n",
+       "3              iPad or iPhone App   \n",
+       "4                          Google   \n",
+       "\n",
+       "  is_there_an_emotion_directed_at_a_brand_or_product  \n",
+       "0                                   Negative emotion  \n",
+       "1                                   Positive emotion  \n",
+       "2                                   Positive emotion  \n",
+       "3                                   Negative emotion  \n",
+       "4                                   Positive emotion  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import data\n",
+    "data = pd.read_csv('tweet_product_company.csv')\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Preview data\n",
+    "df.head()"
    ]
   },
   {
