--- a/Twitter-Sentiment-Analysis.ipynb
+++ b/Twitter-Sentiment-Analysis.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Import-Packages-&amp;-Data\" data-toc-modified-id=\"Import-Packages-&amp;-Data-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Import Packages &amp; Data</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Import-Packages-&amp;-Data\" data-toc-modified-id=\"Import-Packages-&amp;-Data-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Import Packages &amp; Data</a></span></li><li><span><a href=\"#Explore-Data\" data-toc-modified-id=\"Explore-Data-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Explore Data</a></span></li></ul></div>"
    ]
   },
   {
@@ -133,6 +133,37 @@
     "\n",
     "# Preview data\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explore Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 9093 entries, 0 to 9092\n",
+      "Data columns (total 3 columns):\n",
+      "tweet_text                                            9092 non-null object\n",
+      "emotion_in_tweet_is_directed_at                       3291 non-null object\n",
+      "is_there_an_emotion_directed_at_a_brand_or_product    9093 non-null object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 213.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
