Checking out dataset.

--- a/Twitter-Sentiment-Analysis.ipynb
+++ b/Twitter-Sentiment-Analysis.ipynb
@@ -168,6 +168,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "      <th>emotion_in_tweet_is_directed_at</th>\n",
+       "      <th>is_there_an_emotion_directed_at_a_brand_or_product</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>count</td>\n",
+       "      <td>9092</td>\n",
+       "      <td>3291</td>\n",
+       "      <td>9093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>unique</td>\n",
+       "      <td>9065</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>top</td>\n",
+       "      <td>RT @mention Marissa Mayer: Google Will Connect...</td>\n",
+       "      <td>iPad</td>\n",
+       "      <td>No emotion toward brand or product</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>freq</td>\n",
+       "      <td>5</td>\n",
+       "      <td>946</td>\n",
+       "      <td>5389</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               tweet_text  \\\n",
+       "count                                                9092   \n",
+       "unique                                               9065   \n",
+       "top     RT @mention Marissa Mayer: Google Will Connect...   \n",
+       "freq                                                    5   \n",
+       "\n",
+       "       emotion_in_tweet_is_directed_at  \\\n",
+       "count                             3291   \n",
+       "unique                               9   \n",
+       "top                               iPad   \n",
+       "freq                               946   \n",
+       "\n",
+       "       is_there_an_emotion_directed_at_a_brand_or_product  \n",
+       "count                                                9093  \n",
+       "unique                                                  4  \n",
+       "top                    No emotion toward brand or product  \n",
+       "freq                                                 5389  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['iPhone', 'iPad or iPhone App', 'iPad', 'Google', nan, 'Android',\n",
+       "       'Apple', 'Android App', 'Other Google product or service',\n",
+       "       'Other Apple product or service'], dtype=object)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.emotion_in_tweet_is_directed_at.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
