Histograms and value counts.

--- a/Twitter-Sentiment-Analysis.ipynb
+++ b/Twitter-Sentiment-Analysis.ipynb
@@ -279,23 +279,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Negative emotion', 'Positive emotion',\n",
-       "       'No emotion toward brand or product', \"I can't tell\"], dtype=object)"
+       "iPad                               946\n",
+       "Apple                              661\n",
+       "iPad or iPhone App                 470\n",
+       "Google                             430\n",
+       "iPhone                             297\n",
+       "Other Google product or service    293\n",
+       "Android App                         81\n",
+       "Android                             78\n",
+       "Other Apple product or service      35\n",
+       "Name: emotion_in_tweet_is_directed_at, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.is_there_an_emotion_directed_at_a_brand_or_product.unique()"
+    "df.emotion_in_tweet_is_directed_at.value_counts()"
    ]
   },
   {
@@ -320,6 +328,51 @@
     "df.emotion_in_tweet_is_directed_at.hist()\n",
     "plt.xticks(rotation = 90)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Negative emotion', 'Positive emotion',\n",
+       "       'No emotion toward brand or product', \"I can't tell\"], dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.is_there_an_emotion_directed_at_a_brand_or_product.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "No emotion toward brand or product    5389\n",
+       "Positive emotion                      2978\n",
+       "Negative emotion                       570\n",
+       "I can't tell                           156\n",
+       "Name: is_there_an_emotion_directed_at_a_brand_or_product, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.is_there_an_emotion_directed_at_a_brand_or_product.value_counts()"
    ]
   },
   {
